# video-asset-manualize

./: .dockerignore  .env.example  .gitignore  Dockerfile  PHASE2_REPORT.md  PHASE3_REPORT.md  PHASE4_REPORT.md  PHASE5_REPORT.md  README.md  README.md.backup  REPORT.md  add_video_command.py  check_html_methods.py  check_pdf_methods.py  create_mvp.py  create_phase2.py  create_phase3_base.py  create_phase4_base.py  create_phase5_base.py  create_phase6_base.py  create_phase6_extractors.py  create_phase7_base.py  create_phase7_renderers.py  create_phase7_samples.py  create_phase8_base.py  create_phase8_streamlit_app.py  create_phase8_ui_pages.py  create_sample_video.py  debug_phase6.py  docker-compose.yml  extend_build_asset.py  extend_build_asset_phase6.py  extend_build_asset_phase7.py  extend_factory_phase6.py  extend_phase5_factory.py  extend_settings_phase4.py  extend_settings_phase6.py  extend_video_command_phase4.py  extend_video_command_phase5.py  fix_asset_indexer_dedup.py  (+54 more)
docs/: ai_first_canonical_design.md  architecture.md  canonical_generation_acceptance_criteria.md  docker_setup.md  json_schema.md  mvp_scope.md  project_overview.md  prompt_design.md  roadmap.md  source_evidence_spec.md  src_structure.md  vis_inheritance_policy.md
samples/: batch_canonical.json  sample_source_evidence.json  specs_manifest.json  specs_manifest_batch_test.json  videos_manifest.json
schemas/: source_evidence.json  source_evidence.schema.json  training_asset_spec.schema.json
tests/: conftest.py  test_canonical_generation.py  test_modality_adaptive_pipeline.py  (+1 more)
ui/: batch_page.py  (+3 more)
(+115 files in other folders)
