[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-asset-manualize"
version = "0.1.0"
description = "Convert training and manual videos into reusable structured educational assets."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "nario0715masa0619-create" }
]
dependencies = [
  "pydantic>=2.11,<3.0",
  "pydantic-settings>=2.10,<3.0",
  "python-dotenv>=1.1,<2.0",
  "jsonschema>=4.25,<5.0",
  "jinja2>=3.1,<4.0",
  "reportlab>=4.4,<5.0",
  "typer>=0.16,<1.0",
  "rich>=14.0,<15.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.11,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
video_asset_manualize = [
  "templates/**/*.html",
  "templates/**/*.css",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
